actual task completed

--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
                <div class="">
                 <h5 class="text-2xl text-paragraph-color font-extrabold mt-4 md:mt-0  lg:mb-6 mb-4">Commercial</h5>
                 <p class="text-lg opacity-95 font-bold text-paragraph-color mb-4 lg:mb-4">The barn house captivates with its blend of rustic charm and modern. The barn house captivates with its blend of rustic charm and modern .</p>
-                <span class="font-extrabold text-lg text-title-color">View Details  <i class="fa-solid fa-circle-arrow-up fa-rotate-by fa-xl" style="color: #8de725; --fa-rotate-angle: 45deg;"></i></span>
+                <span class="font-extrabold text-lg text-title-color hover:text-bold hover:text-lime-500">View Details  <i class="fa-solid fa-circle-arrow-up fa-rotate-by fa-xl" style="color: #8de725; --fa-rotate-angle: 45deg;"></i></span>
               </div>
             </div>
             <!-- card-2 -->
@@ -286,7 +286,7 @@
               <div class="">
                <h5 class="text-2xl text-paragraph-color font-extrabold mt-4 md:mt-0 lg:mb-4 mb-4">Commercial</h5>
                <p class="text-lg opacity-95 font-bold text-paragraph-color mb-4 lg:mb-4">The barn house captivates with its blend of rustic charm and modern. The barn house captivates with its blend of rustic charm and modern .</p>
-               <span class="font-extrabold text-lg text-title-color">View Details  <i class="fa-solid fa-circle-arrow-up fa-rotate-by fa-xl" style="color: #8de725; --fa-rotate-angle: 45deg;"></i></span> 
+               <span class="font-extrabold text-lg text-title-color hover:text-bold hover:text-lime-500">View Details  <i class="fa-solid fa-circle-arrow-up fa-rotate-by fa-xl" style="color: #8de725; --fa-rotate-angle: 45deg;"></i></span> 
             </div>
           </div>
             <!-- card-5 -->
@@ -303,7 +303,7 @@
 
 
          <!-- article and news section start here  -->
-          <section class="   bg-section-color py-6 lg:py-20">
+          <section class="   bg-section-color py-4 lg:py-20">
             <div class="container w-4/5 lg:w-2/6 mx-auto  text-center space-y-4 ">
               <button class=" btn btn-neutral hover:bg-lime-500  bg-[#ABEF5F] bg-opacity-40 px-6 border-none rounded-full text-gray-800 font-bold"><i class="fa-solid fa-arrow-right" style="color: #413e3e;"></i>Rinterio News</button>
               <h3 class="text-4xl font-extrabold text-title-color ">Read Our Articles and News</h3>
@@ -375,19 +375,19 @@
           <!-- lets discuss section staart from here -->
            <section class="my-4" >
             <div class="pt-20 pb-8" style="background-image:url(assets/bg.jpg); background-repeat: no-repeat; background-size: cover;">
-            <div class="container w-4/5 lg:w-1/2 mx-auto  text-center space-y-4 ">
-              <button class=" btn btn-neutral bg-[#ABEF5F] bg-opacity-40 px-6 border-none rounded-full text-gray-800 font-bold"><i class="fa-solid fa-arrow-right" style="color: #413e3e;"></i>Let’s Connect</button>
+            <div class="container w-4/5 lg:w-2/6 mx-auto  text-center space-y-4 ">
+              <button class=" btn btn-neutral hover:bg-lime-500 bg-[#ABEF5F] bg-opacity-40 px-6 border-none rounded-full text-gray-800 font-bold"><i class="fa-solid fa-arrow-right" style="color: #413e3e;"></i>Let’s Connect</button>
               <h3 class="text-4xl font-extrabold text-title-color ">Let’s Discuss Next Project</h3>
               <p class="paragraph-color text-sm font-semibold opacity-90">The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood, sleek metal accents.</p>
             </div>
-            <div class="container w-4/5 lg:w-4/6 m-auto mt-8">
+            <div class="container w-4/5 lg:w-2/3 m-auto mt-8">
                <div class="grid grid-cols-1 md:grid-cols-2 grid-rows-7 gap-6">
-                  <input type="text" required class="required:border-red-500 border-none rounded-full p-5" placeholder="First Name*"/>
+                  <input type="text" class="required:border-red-500 border-none rounded-full p-5" placeholder="First Name*"/>
                   <input type="text" class="required:border-red-500 border-none rounded-full p-5" placeholder="Last Name*"/>
                   <input type="text" class="required:border-red-500 border-none rounded-full p-5" placeholder="Phone number*"/>
                   <input type="text" class="required:border-red-500 border-none rounded-full p-5" placeholder="Email Address*"/>
                   <textarea name="" class="required:border-red-500 border-none rounded-3xl p-5 md:col-span-2 row-span-3" id="" placeholder="Write your message here"></textarea>
-                  <a class="btn bg-btn-color font-bold border-none rounded-full p-5 md:col-span-2 text-center">Send Mail <i class="fa-solid fa-circle-arrow-up fa-rotate-by fa-2xl" style="color: #000000; --fa-rotate-angle: 45deg;"></i></a>
+                  <a class="btn bg-btn-color font-extrabold border-none rounded-full p-5 md:col-span-2 text-center hover:bg-lime-500">Send Mail <i class="fa-solid fa-circle-arrow-up fa-rotate-by fa-2xl" style="color: #000000; --fa-rotate-angle: 45deg;"></i></a>
                </div>
             </div>
           </div>
@@ -398,11 +398,11 @@
 
 
   <!-- footer section start here  -->
-      <footer class="footer footer-center bg-black text-base-content rounded p-10">
+      <footer class="footer footer-center bg-black text-base-content py-20 mb-6 rounded p-10">
         <div class="flex">
-          <a class="btn btn-ghost font-bold text-3xl text-white"><i class="fa-solid fa-circle-arrow-up fa-rotate-by " style="color: #abef5f; --fa-rotate-angle: 45deg;"></i>Rinterio</a>
+          <a class="btn btn-ghost font-bold text-3xl hover:bg-lime-300 hover:text-black hover:rounded-full text-white"><i class="fa-solid fa-circle-arrow-up fa-rotate-by " style="color: #599c0c; --fa-rotate-angle: 45deg;"></i>Rinterio</a>
         </div>
-        <p class="text-paragraph-color font-semibold -mt-4 w-4/5 lg:w-1/2 mx-auto">The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood, sleek metal accents.</p>
+        <p class="text-paragraph-color font-semibold -mt-4 w-4/5 lg:w-2/5 opacity-85 mx-auto">The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood, sleek metal accents.</p>
         <div class="grid grid-cols-1 md:grid-cols-5 gap-6 text-gray-500 text">
           <a class="link link-hover">Home</a>
           <a class="link link-hover">Services</a>
@@ -410,7 +410,7 @@
           <a class="link link-hover">Blogs</a>
           <a class="link link-hover">Contact US</a>
         </div>
-        <a class="btn bg-btn-color font-bold border-none w-full md:w-auto rounded-full text-center flex py-3">Book Consult <i class="fa-solid fa-circle-arrow-up fa-rotate-by fa-2xl" style="color: #000000; --fa-rotate-angle: 45deg;"></i></a>
+        <a class="btn bg-btn-color font-extrabold border-none w-full md:w-auto rounded-full hover:bg-lime-500 text-center flex py-3">Book Consult <i class="fa-solid fa-circle-arrow-up fa-rotate-by fa-2xl" style="color: #000000; --fa-rotate-angle: 45deg;"></i></a>
                   
       </footer>
 </body>
