frequwntly ask question section completed

--- a/index.html
+++ b/index.html
@@ -372,6 +372,62 @@
              </div>
           </section>
 
+           <!-- frequently ask questio sectio  -->
+           <div class="container w-4/5 lg:w-2/6 mx-auto  text-center space-y-4 py-14">
+            <button class=" btn btn-neutral hover:bg-lime-500  bg-[#ABEF5F] bg-opacity-40 px-6 border-none rounded-full text-gray-800 font-bold"><i class="fa-solid fa-arrow-right" style="color: #413e3e;"></i>Any Queries ?</button>
+            <h3 class="text-4xl font-extrabold text-title-color ">Frequently Asked Any Questions</h3>
+            <p class="paragraph-color text-sm font-semibold opacity-90">The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood, sleek metal accents.</p>
+          </div>
+            <div class="hero w-full">
+              <div class="hero-content flex-col lg:flex-row justify-between items-center">
+                <div class="space-y-5 flex-1">
+                  <div class="collapse collapse-arrow bg-base-200 border border-blue-200">
+                    <input type="radio" name="my-accordion-2" checked="checked"/>
+                    <div class="collapse-title text-xl font-semibold bg-lime-200">1. Are application fee waivers available?</div>
+                    <div class="collapse-content text-lg">
+                    <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, . </p>
+                    </div>
+                  </div>
+                  <div class="collapse collapse-arrow bg-base-200 border border-blue-200">
+                    <input type="radio" name="my-accordion-2" checked="checked"/>
+                    <div class="collapse-title text-xl font-semibold bg-lime-200">2. Are application fee waivers available?</div>
+                    <div class="collapse-content text-lg">
+                    <p>Safety First! Always obey the rules of the road. Obey all traffic signals, signs, and laws. Get in the mindset of “driving” your bike—not just “riding” your bike. This will help you be a more focused and legally compliant bike rider. </p>
+                    </div>
+                  </div>
+                  <div class="collapse collapse-arrow bg-base-200 border border-blue-200">
+                    <input type="radio" name="my-accordion-2" checked="checked"/>
+                    <div class="collapse-title text-xl font-semibold bg-lime-200">3. My bike has been in storage is it safe to ride?</div>
+                    <div class="collapse-content text-lg">
+                    <p class="">Safety First! Always obey the rules of the road. Obey all traffic signals, signs, and laws. Get in the mindset of “driving” your bike—not just “riding” your bike. This will help you be a more focused and legally compliant bike rider. </p>
+                    </div>
+                  </div>
+                  <div class="collapse collapse-arrow bg-base-200 border border-blue-200">
+                    <input type="radio" name="my-accordion-2" checked="checked"/>
+                    <div class="collapse-title text-xl font-semibold bg-lime-200">4. What rules should I follow when riding my bike?</div>
+                    <div class="collapse-content text-lg">
+                    <p>Safety First! Always obey the rules of the road. Obey all traffic signals, signs, and laws. Get in the mindset of “driving” your bike—not just “riding” your bike. This will help you be a more focused and legally compliant bike rider. </p>
+                    </div>
+                  </div>
+                  <div class="collapse collapse-arrow bg-base-200 border border-blue-200">
+                    <input type="radio" name="my-accordion-2" checked="checked"/>
+                    <div class="collapse-title text-xl font-semibold bg-lime-200">4. What rules should I follow when riding my bike?</div>
+                    <div class="collapse-content text-lg">
+                    <p>Safety First! Always obey the rules of the road. Obey all traffic signals, signs, and laws. Get in the mindset of “driving” your bike—not just “riding” your bike. This will help you be a more focused and legally compliant bike rider. </p>
+                    </div>
+                  </div>
+                  
+                </div>
+                <div class="w-full flex-1">
+                  <img
+                  src="assets/faq.jpg"
+                  class="rounded-lg w-[500px] h-[500px] "/>
+                </div>
+              </div>
+            </div>
+          </section>
+
+
           <!-- lets discuss section staart from here -->
            <section class="my-4" >
             <div class="pt-20 pb-8" style="background-image:url(assets/bg.jpg); background-repeat: no-repeat; background-size: cover;">
