background chnages added

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
            <script src="https://kit.fontawesome.com/01deae64a9.js" crossorigin="anonymous"></script>
 
 </head>
-<body class="manrope-font">
+<body class="manrope-font bg-white">
       <header class="container bg-white w-5/6 mx-auto back-color" >
           <!-- navigation bar  -->
            <nav>
@@ -214,9 +214,9 @@
 
 
         <!-- work process section start here -->
-         <section class=" mx-auto lg:py-8 bg-section-color">
+         <section class=" mx-auto lg:py-14 bg-section-color">
           <!-- workpress section -->
-            <div class=" container w-4/5 lg:w-1/2 mx-auto  pt-12 text-center space-y-4">
+            <div class=" container w-4/5 lg:w-1/2 mx-auto text-center space-y-4">
               <button class=" btn btn-neutral hover:bg-lime-300 bg-white border-none rounded-full text-gray-800 font-bold"><i class="fa-solid fa-arrow-right" style="color: #413e3e;"></i>How we works</button>
               <h3 class="md:text-4xl text-2xl font-extrabold text-title-color ">Our Works Process</h3>
               <p class="paragraph-color text-sm font-semibold opacity-90">The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood, sleek metal accents.</p>
@@ -371,6 +371,32 @@
               </div>
              </div>
           </section>
+
+
+
+          <!-- collections -->
+          <section class="py-14">
+              <div class="container w-4/5 lg:w-2/6 mx-auto  text-center space-y-4 mb-6 ">
+              <button class=" btn btn-neutral hover:bg-lime-500  bg-[#ABEF5F] bg-opacity-40 px-6 border-none rounded-full text-gray-800 font-bold"><i class="fa-solid fa-arrow-right" style="color: #413e3e;"></i>Latest Collection</button>
+              <h3 class="text-4xl font-extrabold text-title-color ">Check our latest design and collections</h3>
+              <p class="paragraph-color text-sm font-semibold opacity-90">The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood, sleek metal accents.</p>
+            </div>
+            <div class="diff w-5/6 mx-auto aspect-[16/9]">
+              <div class="diff-item-1">
+                <img alt="daisy" src="assets/article1.png" />
+              </div>
+              <div class="diff-item-2">
+                <img
+                  alt="daisy"
+                  src="assets/article2.png" />
+              </div>
+              <div class="diff-resizer bg-lime-400"></div>
+            </div>
+          </section>
+
+
+
+
 
            <!-- frequently ask questio sectio  -->
            <div class="container w-4/5 lg:w-2/6 mx-auto  text-center space-y-4 py-14">
