color chnages added

--- a/index.html
+++ b/index.html
@@ -52,10 +52,10 @@
            <script src="https://kit.fontawesome.com/01deae64a9.js" crossorigin="anonymous"></script>
 
 </head>
-<body class="manrope-font bg-white">
+<body class="manrope-font">
       <header class="container bg-white w-5/6 mx-auto back-color" >
           <!-- navigation bar  -->
-           <nav>
+           <nav class="bg-white">
             <div class="navbar bg-base-100 my-5 md:my-8">
                 <div class="navbar-start">
                   <i class="fa-solid fa-circle-arrow-up fa-rotate-by fa-2xl" style="color: #abef5f; --fa-rotate-angle: 45deg;"></i>
@@ -77,8 +77,8 @@
                       <i class="fa-solid fa-cart-arrow-down  border rounded-full text-center p-2 " style="color: #020203;"></i>
                     </div>
                    </div>
-                  <a class="btn bg-btn-color font-bold hover:bg-lime-400 hidden md:block py-3">Book Consult <i class="fa-solid fa-circle-arrow-up fa-rotate-by fa-2xl" style="color: #000000; --fa-rotate-angle: 45deg;"></i></a>
-                  <div class="dropdown dropdown-left">
+                   <a class="btn bg-btn-color font-extrabold border-none w-full md:w-auto rounded-xl hover:bg-lime-500 text-center flex py-3">Book Consult <i class="fa-solid fa-circle-arrow-up fa-rotate-by fa-2xl" style="color: #000000; --fa-rotate-angle: 45deg;"></i></a>
+                   <div class="dropdown dropdown-left">
                     <div tabindex="0" role="button" class="btn btn-ghost hover:bg-lime-400 lg:hidden">
                       <svg
                         xmlns="http://www.w3.org/2000/svg"
@@ -128,7 +128,7 @@
       <main>
 
       <!-- section design thoughtful start here -->
-       <section class="bg-base-200 ">
+       <section class="bg-base-200 bg-white ">
         <div class=" container md:w-5/6 mx-auto hero bg-base-200 py-20">
           <div class="hero-content grid grid-cols-1 lg:grid-cols-2 relative w-full mx-auto">  
           <img class="absolute -top-8 -left-8 hidden lg:block" src="assets/Vector.png" alt="">
@@ -313,13 +313,13 @@
             <!-- box -->
              <div class="container  w-11/12 lg:w-5/6 mx-auto grid grid-cols-1 lg:grid-cols-3 gap-8 lg:gap-12 mt-8">
               
-               <!-- box-1 -->
-               <div class="card bg-base-100 shadow-xl grid md:grid-cols-2 lg:grid-cols-1">
+              <!-- box-1 -->
+               <div class="card bg-white shadow-xl grid md:grid-cols-2 lg:grid-cols-1">
                 <figure class="px-6 pt-6">
                   <img
                     src="assets/article1.png"
                     alt="article"
-                    class="rounded-xl  lg:size-full" />
+                    class="rounded-xl lg:size-full" />
                 </figure>
                 <div class="card-body items-start text-start space-y-2 ">
                   <div class="flex space-x-4">
