--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
 </head>
 <body class="manrope-font">
-      <header class="container bg-white w-5/6 mx-auto back-color" >
+      <header class="container w-5/6 mx-auto back-color" >
           <!-- navigation bar  -->
            <nav class="bg-white">
             <div class="navbar bg-base-100 my-5 md:my-8">
