--- a/index.html
+++ b/index.html
@@ -255,14 +255,14 @@
 
          <!-- latest portfolio section start from here  -->
 
-         <section id="portfolio" class="container mx-auto py-20 bg-section-color lg:bg-transparent">
-          <div class="w-4/5 lg:w-1/2 mx-auto text-center space-y-4">
+         <section id="portfolio" class="mx-auto py-20 bg-section-color lg:bg-transparent">
+          <div class=" container w-4/5 lg:w-1/2 mx-auto text-center space-y-4">
             <button class=" btn btn-neutral hover:bg-lime-500 bg-[#ABEF5F] bg-opacity-40 px-6 border-none rounded-full text-gray-800 font-bold"><i class="fa-solid fa-arrow-right" style="color: #413e3e;"></i>Explore our Latest works</button>
             <h3 class=" text-2xl md:text-4xl font-extrabold text-title-color ">Our Latest Portfolio</h3>
             <p class="paragraph-color text-sm font-semibold opacity-90">The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood, sleek metal accents.</p>
           </div>
 
-          <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-10 md:grid-rows-2 gap-8 mt-8 w-11/12 mx-auto">
+          <div class=" container grid grid-cols-1 md:grid-cols-2 lg:grid-cols-10 md:grid-rows-2 gap-8 mt-8 w-11/12 mx-auto">
             <!-- card-1 -->
             <div class="border-2 rounded-3xl p-6 md:col-span-2 lg:col-span-7 flex md:flex-row flex-col space-x-6 items-center lg:bg-transparent bg-white">
                <img class="rounded-3xl" src="assets/img1.png" alt="">
